<resources>
    <string name="app_name">【阿里云HttpDns】Demo程序</string>
    <string name="action_settings">Settings</string>
    <string name="normal_parse">普通解析</string>
    <string name="request_taobao">解析淘宝域名</string>
    <string name="request_apple">解析apple域名</string>
    <string name="request_douban">解析豆瓣域名</string>
    <string name="https_parse">HTTPS解析</string>
    <string name="timeout">设置超时</string>
    <string name="set_expired">允许过期域名</string>
    <string name="set_cache">开启持久化缓存</string>
    <string name="set_degration_filter">降级策略</string>
    <string name="set_pre_resolve">预解析</string>
    <string name="set_region">region</string>
    <string name="sync_request">同步解析</string>
    <string name="multi_sync_request">同步解析并发</string>
    <string name="multi_request">并发解析</string>

    <string name="main_about_us">关于我们</string>
    <string name="main_helper">帮助中心</string>
    <string name="main_clear_text">清除当前消息</string>

    <!--关于我们页面-->
    <string name="layout_aboutus_arr">All Rights Reserved.</string>
    <string name="layout_aboutus_company">阿里云(软件)有限公司版权所有</string>
    <string name="layout_aboutus_copyright">Copyright © 2009 - 2016 Aliyun.com</string>
    <string name="layout_aboutus_app_version">1.1.3</string>
    <!--帮助中心页面-->
    <string name="layout_helpus_content">Q : 什么是用户体验Demo？\nA : 用户体验Demo就是阿里云平台为您自动创建的、用来体验HttpDns服务和反馈建议用的一个小Demo，让您体验便捷、高效的HttpDns服务。\n\nQ : 如何联系我们？\nA : App Demo相关问题，请搜索钉钉群号：11777313</string>

</resources>
