<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <TableLayout
        android:id="@+id/tlSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EAEAEA"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:stretchColumns="3">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnRequestIpv6"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="解析ipv6域名" />

            <Button
                android:id="@+id/btnRequestTaobao"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/request_taobao" />

            <Button
                android:id="@+id/btnRequestApple"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/request_apple" />

            <Button
                android:id="@+id/btnRequestDouban"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/request_douban" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnNormalParse"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/normal_parse" />

            <Button
                android:id="@+id/btnHttpsParse"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/https_parse" />

            <Button
                android:id="@+id/btnIpv6Parse"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="ipv6解析" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1_1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnTimeout"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/timeout" />

            <Button
                android:id="@+id/btnSetExpired"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_expired" />

            <Button
                android:id="@+id/btnSetCache"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_cache" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1_2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDegrationFilter"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_degration_filter" />

            <Button
                android:id="@+id/btnPreResove"
                style="@style/button_allgrade_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/set_pre_resolve" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvConsoleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/tlSetting"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:background="@drawable/aliyun_bg" />

</RelativeLayout>